new I fvcked up, because I didn't do a proper commit, now I don't know what to say in the commit, but better commited than lost

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.digit_api_check">
+    package="com.tagit.digit_api_check">
 
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
     <application
-        android:name=".DominoApplication"
+        android:name="com.tagit.digit_api_check.DominoApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Digit_api_check">
         <activity
-            android:name=".ui.modules.home.HomeActivity"
+            android:name="com.tagit.digit_api_check.ui.modules.home.HomeActivity"
             android:exported="true"
             android:label="@string/title_activity_home"
             android:theme="@style/Theme.Digit_api_check.NoActionBar">
